--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,13 @@ services:
     ports:
       - 8002:8000
     environment:
-      - DATABASE_URL=postgresql://postgres:admin@db/people
-  db:
-    image: postgres:12.1-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=people
+      - DATABASE_URL=postgresql://root:a@cnt_postgres:5432/people
 
 volumes:
   postgres_data:
+
+networks:
+  default:
+    name: animenet
+    external: true
+
