--- a/src/tox.ini
+++ b/src/tox.ini
@@ -7,5 +7,5 @@ addopts = -p no:warnings
 
 [testenv]
 deps = -r test_requirements.txt
-setenv = DATABASE_URL = postgresql://postgres:admin@db/people
+setenv = DATABASE_URL = postgresql://postgres:root:a@cnt_postgres:5432/people
 commands = python -m pytest -v --cov-report=html --cov=app/ {posargs}
